feat: Add reusable library API with public run_diagnosis() function
- Implement public API (run_diagnosis) for easy library usage
- Create DiagnosisResult dataclass for structured output
- Support pre-trained models and config-based model building
- Add comprehensive LIBRARY_USAGE.md documentation
- Add example_library_usage.py with 6 working examples
- Add test_library_api.py test suite
- Reorganize files into proper directory structure (examples/, tests/)
- Fix imports and Windows path compatibility
- Update README with library usage section
- Maintain backward compatibility with CLI
- Update .gitignore to exclude large output files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ Repository = "https://github.com/yourusername/bias-variance-diagnoser.git"
 diagnoser = "diagnoser.diagnoser:main"
 
 [tool.setuptools]
-packages = ["diagnoser"]
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
